--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,74 +1,96 @@
+#page {
+  background-color: #000;
+}
 
-.App{
+#App{
   max-width: 100vw;
   margin: auto;
-  height: 100vh;
+  /* height: 100vh; */
   text-align: center;
+    /* overflow: auto; */
 }
 
-.row {
-  background-color: #000;
-  border: 2px solid rgb(255, 255, 255);
+#footer{
+  /* position: fixed; */
+  margin: 3% auto;
 }
 
+.foot-line {
+  width: 50vw;
+  border-top: 3px solid rgb(255, 255, 255);
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  /* margin: auto; */
+}
+
+.flex-column {
+  position: fixed;
+  margin: 4vh;
+  margin-bottom: 4vh;
+}
 .box{
   margin: 10px;
   padding: 20px;
-  border: 2px solid rgb(255, 255, 255);
+  /* border: 2px solid rgb(255, 255, 255); */
   text-align: center;
   color: rgb(255, 255, 255);
+}
+
+a {
+  text-decoration: none;
 }
 
 #main-col {
-  max-width: 100vw;
-  display: inline;
-  border: 2px solid rgb(255, 255, 255);
+  /* border: 2px solid rgb(255, 255, 255); */
+  /* max-width: 100vw; */
+  /* display: inline; */
   text-align: center;
   color: rgb(255, 255, 255);
   align-content: center;
-  overflow: auto;
-}
-
-.screenContainer {
-  height: 97vh;
-  overflow: scroll;
   margin: 10px;
   padding: 20px;
-  border: 2px solid rgb(255, 255, 255);
-  text-align: center;
-  color: rgb(255, 255, 255);
-  align-content: center;
-
+  background-color: #000;
+  /* overflow: auto; */
 }
+
+
+#home-jumbo {
+  background-image: url('https://cdn.pixabay.com/photo/2018/05/12/03/00/shy-3392329_1280.jpg');
+}
+
 #side-col {
   display: none;
 }
 
-img {
+/* img {
   max-width: 80%;
   max-height: auto;
-}
+} */
 
 @media only screen and (min-width: 768px) {
-  #navspace {
+  #top-menu {
     display: none;
   }
   #side-col {
-    height: 100vh;
+    /* height: 100vh; */
     display: inline;
-    padding-top: 15%;
-    padding-bottom: 15%;
+    /* position: fixed; */
+    padding-top: 15vh;
+    padding-bottom: 15vh;
     justify-content: center;
-    max-width: 20%;
-    border: 2px solid rgb(255, 255, 255);
+    /* max-width: 15vw; */
+    background-color: #000;
+    /* border: 2px solid rgb(255, 255, 255); */
 
   }
   #main-col {
-    height: 100vh;
-    max-width: 80%;
-    padding-left: 0;
-    margin: auto;
-    overflow: auto;
+    /* max-height: 100vh; */
+    margin: 0;
+    /* max-width: 100%;
+    margin-left: 2vw; */
+    /* margin: auto; */
+    /* overflow: auto; */
   }
 }
 
@@ -78,15 +100,14 @@ img {
   width: 19%;
   margin: auto;
   position: fixed;
-  z-index: 1;
+  /* z-index: 1; */
   left: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* padding-top: 20px;
   padding-bottom: 20px; */
-  line-height: 100vh;
 }
 
-.sidenav h3 {
+a {
   text-align: center;
   margin: auto 0;
   padding: 8px;
@@ -96,7 +117,7 @@ img {
   display: block;
 }
 
-.sidenav h3:hover, .sidenav h3 active {
+a:hover, a active {
   color: #f1f1f1;
 }
 
@@ -104,4 +125,8 @@ img {
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav h3 {font-size: 18px;}
+}
+
+#button-tooltip {
+  animation: none
 }
