--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -3,7 +3,7 @@
 }
 
 #App{
-  max-width: 100vw;
+  width: 100vw;
   margin: auto;
   /* height: 100vh; */
   text-align: center;
@@ -43,7 +43,7 @@ a {
 
 #main-col {
   /* border: 2px solid rgb(255, 255, 255); */
-  /* max-width: 100vw; */
+  width: 100vw;
   /* display: inline; */
   text-align: center;
   color: rgb(255, 255, 255);
@@ -87,9 +87,9 @@ a {
   #main-col {
     /* max-height: 100vh; */
     margin: 0;
-    /* max-width: 100%;
-    margin-left: 2vw; */
-    /* margin: auto; */
+    width: 100vw; 
+    /* margin-left: 2vw; */
+    margin: auto;
     /* overflow: auto; */
   }
 }
