--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -37,19 +37,24 @@
   color: rgb(255, 255, 255);
 }
 
-a {
+.nav-link, a {
+  color: #fff;
   text-decoration: none;
 }
 
+.nav-link:hover, .nav-link:active, a:hover, a:active{
+  color: #ffcc66
+}
+
 #main-col {
-  /* border: 2px solid rgb(255, 255, 255); */
-  width: 100vw;
+  border-right: 2px solid rgb(255, 255, 255);
+  /* width: 100vw; */
   /* display: inline; */
   text-align: center;
   color: rgb(255, 255, 255);
   align-content: center;
-  margin: 10px;
-  padding: 20px;
+  margin: auto;
+  padding: 1%;
   background-color: #000;
   /* overflow: auto; */
 }
@@ -57,6 +62,8 @@ a {
 
 #home-jumbo {
   background-image: url('https://cdn.pixabay.com/photo/2018/05/12/03/00/shy-3392329_1280.jpg');
+  width: 80vw;
+  margin: 1%;
 }
 
 #side-col {
@@ -94,6 +101,17 @@ a {
   }
 }
 
+.navbar-toggler-icon {
+  color: #ffcc66;
+}
+
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.custom-toggler.navbar-toggler {
+  border-color: rgb(255,102,203);
+} 
 
 .sidenav {
   height: 100vh;
@@ -117,8 +135,8 @@ a {
   display: block;
 }
 
-a:hover, a active {
-  color: #f1f1f1;
+a:hover, a:active {
+  color: #ffcc66;
 }
 
 
